# report-generator

./: README.md  pyproject.toml
src/report_generator/: __init__.py  models.py  server.py  template.py
