[project]
name = "report-generator"
version = "0.1.0"
description = "MCP Server for generating market research reports in HTML format"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
    { name = "AI Agent (TRAE CN SOLO GLM5.1)" },
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
report-generator = "report_generator.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/report_generator"]

[tool.ruff]
line-length = 120
target-version = "py310"
